--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,17 +56,38 @@
         android:layout_marginHorizontal="30dp"
         android:layout_below="@+id/edt_password"/>
 
-    <android.widget.Button
-        android:id="@+id/btn_login"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/edt_password"
-        android:layout_marginStart="40dp"
+        android:orientation="horizontal"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/btn_bg"
-        android:text="Login"
-        android:textColor="#fff" />
+        android:layout_marginHorizontal="20dp">
+
+
+        <android.widget.Button
+            android:id="@+id/btn_login"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_bg"
+            android:text="Login"
+            android:layout_marginRight="20dp"
+            android:textColor="#fff" />
+
+
+
+        <android.widget.Button
+            android:id="@+id/btn_register"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_bg"
+            android:text="Register"
+            android:textColor="#fff" />
+
+
+
+    </LinearLayout>
 
 </RelativeLayout>
