Linear Layout Login page Design

--- a/app/src/main/res/layout/activity_linear.xml
+++ b/app/src/main/res/layout/activity_linear.xml
@@ -70,4 +70,10 @@
             android:text="Register"/>
     </LinearLayout>
 
+    <include layout="@layout/part2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+
+
 </LinearLayout>
