Type of intent Explicit and Implicit

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,12 @@
 
 
     <ImageView
+        android:id="@+id/img_logo"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/customer"
         android:layout_centerHorizontal="true"
-        android:id="@+id/img_logo"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"
+        android:src="@drawable/customer" />
 
     <TextView
         android:id="@+id/tv_login"
@@ -88,12 +88,12 @@
 
 
         <android.widget.Button
-            android:id="@+id/btn_register"
+            android:id="@+id/btn_send"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_bg"
-            android:text="Register"
+            android:text="Send"
             android:textColor="#fff" />
 
 
