--- a/app/src/main/res/layout/activity_seekbar.xml
+++ b/app/src/main/res/layout/activity_seekbar.xml
@@ -22,4 +22,21 @@
         android:layout_gravity="center"
         android:layout_marginTop="30dp"/>
 
+
+    <RatingBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ratingbar"
+        android:numStars="5"
+        android:layout_gravity="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_ratingbar"
+        android:textSize="20sp"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/purple_500"
+        android:layout_gravity="center"/>
+
 </LinearLayout>
