Custom Dialog in Android

--- a/app/src/main/res/layout/activity_alert.xml
+++ b/app/src/main/res/layout/activity_alert.xml
@@ -16,4 +16,15 @@
         android:text="Alert Dialog"
         android:textColor="#fff"/>
 
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_ctm_alert"
+        android:text="Custom Dialog"
+        android:textColor="#fff"/>
+
+
+
 </LinearLayout>
