--- a/app/src/main/res/layout/activity_alert.xml
+++ b/app/src/main/res/layout/activity_alert.xml
@@ -26,5 +26,13 @@
         android:textColor="#fff"/>
 
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_ctm_toast"
+        android:text="Custom Toast"
+        android:textColor="#fff"
+        android:layout_marginTop="30dp"/>
+
 
 </LinearLayout>
