--- a/app/src/main/res/layout/activity_image_pick.xml
+++ b/app/src/main/res/layout/activity_image_pick.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ImagePickActivity"
+    tools:context=".activity.ImagePickActivity"
     android:padding="30dp"
     android:orientation="vertical">
     <ImageView
