--- a/app/src/main/res/layout/activity_seekbar.xml
+++ b/app/src/main/res/layout/activity_seekbar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SeekbarActivity"
+    tools:context=".activity.SeekbarActivity"
     android:orientation="vertical"
     android:padding="30dp">
 
