--- a/app/src/main/res/layout/activity_simple_grid_view.xml
+++ b/app/src/main/res/layout/activity_simple_grid_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SimpleGridViewActivity"
+    tools:context=".activity.SimpleGridViewActivity"
     android:orientation="vertical"
     android:background="#000"
     android:padding="10dp">
