--- a/app/src/main/res/layout/activity_simple_listview.xml
+++ b/app/src/main/res/layout/activity_simple_listview.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SimpleListviewActivity"
+    tools:context=".activity.SimpleListviewActivity"
     android:orientation="vertical">
 
     <ListView
