--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#F8F5F8</color>
+    <color name="purple_500">#610761</color>
     <color name="purple_700">#14534D</color>
     <color name="teal_200">#9C27B0</color>
     <color name="teal_700">#FF018786</color>
