--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,5 +14,14 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="Theme.MyAppgen6to7MT.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.MyAppgen6to7MT.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.MyAppgen6to7MT.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 
 </resources>
