--- a/app/src/main/res/layout/raw_cutm_list.xml
+++ b/app/src/main/res/layout/raw_cutm_list.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/btn_bg"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:layout_margin="10dp">
 
 
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:id="@+id/img_data"
+        android:layout_gravity="center"
         android:src="@color/teal_200"/>
 
 
@@ -20,7 +22,7 @@
         android:id="@+id/tv_data"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginHorizontal="20dp"
+        android:layout_gravity="center"
         android:text="No Data available"
         android:layout_marginTop="30dp"
         android:textColor="#fff"/>
