--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -7,6 +7,9 @@
     <item android:id="@+id/item_settings"
         android:title="Setting"
         android:icon="@drawable/ic_lock"/>
+
+    <item android:id="@+id/item_null"
+        android:title="" />
     <item android:id="@+id/item_post"
         android:title="Post"
         android:icon="@drawable/ic_person"/>
