--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#610761</color>
-    <color name="purple_700">#14534D</color>
-    <color name="teal_200">#9C27B0</color>
+    <color name="purple_700">#610761</color>
+    <color name="teal_200">#610761</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#D36262</color>
